--- a/CRUD-ASP-NET/appsettings.json
+++ b/CRUD-ASP-NET/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "ConnectionStrings": {
+    "TelloCompanyDatabase": "Server=(localdb)\\ProjectsV13;Initial Catalog=TelloCompany;Integrated Security=True"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
